[package]
name = "wlunes"
version = "1.0.0"
authors = ["Lunex Team"]
edition = "2021"
description = "Wrapped Lunes (WLUNES) - PSP22 Token Contract for Lunes Network"
license = "MIT"
repository = "https://github.com/lunes-platform/WLUNES"

[dependencies]
ink = { version = "5.1.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = "5.1.1"

[lib]
name = "wlunes"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
overflow-checks = false

[profile.dev]
panic = "abort"
overflow-checks = false
